--- a/resize.deployment.yaml
+++ b/resize.deployment.yaml
@@ -15,4 +15,6 @@ spec:
         imagePullPolicy: "IfNotPresent"
         ports:
         - containerPort: 5035
+      imagePullSecrets:
+      - name: myregistrykey
 
