--- a/resize.service.yaml
+++ b/resize.service.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    k8s-app: resize
-  name: k8s-resize
+    k8s-app: my-resize
+  name: my-resize
 spec:
   type: NodePort
   ports:
   - port: 5035
   selector:
-    k8s-app: resize
+    k8s-app: my-resize
